--- a/style.css
+++ b/style.css
@@ -42,3 +42,23 @@ footer{
 .beyaz{
     background-color: white;
 }
+.quoteContainer {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 50px;
+    width: 80%;
+    border: 1px solid grey;
+    border-radius: 20px;
+}
+#quote {
+    font-family: "Bradley Hand ITC";
+    text-align: center;
+    font-size: 20px;
+}
+
+#author {
+    margin-top: 10px;
+    font-family: "Bradley Hand ITC";
+    font-size: 35px;
+}
